# Cmakelist_maker

Cmakelist_maker/: cmake_ref.txt
Cmakelist_maker/includes/: CPP_exe_makelist.h
Cmakelist_maker/libs/CPP_exe_makelist.cpp/: CPP_exe_makelist  CPP_exe_makelist.cpp
Cmakelist_maker/libs/CPP_exe_makelist.cpp/example/: CMakeLists.txt
Cmakelist_maker/libs/CPP_exe_makelist.cpp/example/libs/: CMakeLists.txt
Cmakelist_maker/libs/CPP_exe_makelist.cpp/example/libs/new_source1/: CMakeLists.txt
Cmakelist_maker/libs/CPP_exe_makelist.cpp/example/libs/source2/: CMakeLists.txt
system_example/: Untitled-1  Untitled-1.cpp  touch
